--- a/precision-viewer/src/app/app.component.html
+++ b/precision-viewer/src/app/app.component.html
@@ -1,1 +1,6 @@
+<div class="controls">
+  <button (click)="spinCamera()">Spin Camera ↪️</button>
+  <button (click)="spinCameraVertical()">Spin Camera ⤴️</button>
+  <button (click)="stopSpinning()">🛑</button>
+</div>
 <div #canvas></div>
