--- a/precision-viewer/src/app/app.component.scss
+++ b/precision-viewer/src/app/app.component.scss
@@ -1,16 +1,33 @@
-html, body {
-    margin: 0;
-    padding: 0;
-    overflow: hidden; /* Prevent scrollbars */
-    height: 100%;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* Prevent scrollbars */
+  height: 100%;
+}
+
+canvas {
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.controls {
+  position: absolute;
+  top: 16px;
+  left: 16px;
+  z-index: 1000;
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  button {
+    margin-right: 10px;
+    &:last-child {
+      margin-right: 0;
+    }
   }
-  
-  canvas {
-    display: block;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-  }
-  
+}
